--- a/src/main/resources/static/css/estilos.css
+++ b/src/main/resources/static/css/estilos.css
@@ -1,46 +1,82 @@
 /*
 Estilos de formatos
 */
+*{
+    box-sizing: border-box;
+    margin: 0;
+}
+body{
+    font-family: sans-serif;
+    padding:80px 20px 0;
+    background-color: bisque;
+     
+}
+header{
+    position: fixed;
+    background-color: blue;
+    
+    top: 0;
+    left: 0;
+    height: 80px;
+    width: 100%;
+        
+}
 
-          h2{
-                background-color: blue;
-                color: white;
-            }
-          h3{
-                text-align: center;
-                background-color: gray;
-                color: white;
-            }
-          footer{
-                 text-align: center;
-                background-color: blue;
-                color: white;
-                
-            }
-         a{
-                text-decoration: none;
-                background-color: green;
-                color: white;
-         }
-         
-         a:hover{
-           background-color: black;
-           color: white;
-         } 
-         /*para utilizar un id*/
-         #alerta{
-           background-color: yellowgreen;
-           color: red;
-         }
-         /*para esto se utiliza class*/
-         .aviso{
-           background-color: brown;
-           color: white;
-         }
-         
-         p span{
-           background-color: black;
-           color: white;
-         }
+aside{
+    position: fixed;
+    background-color: aquamarine;
+    
+    top: 80px;
+    left: 0;
+    bottom: 20px;
+    width: 20%;
+}
+section{
+    overflow-y: scroll;
+    position: fixed;
+    background-color: bisque;
+    
+    top: 80px;
+    left: 20%;
+    bottom: 20px;
+    width: 80%;
+}
+
+footer{
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    height: 20px;
+    width: 100%;
+    text-align: center;
+    background-color: yellow;
+    color: red;
+
+}
+a{
+    text-decoration: none;
+    background-color: green;
+    color: white;
+}
+
+a:hover{
+    background-color: black;
+    color: white;
+}
+/*para utilizar un id*/
+#alerta{
+    background-color: yellowgreen;
+    color: red;
+}
+/*para esto se utiliza class*/
+.aviso{
+    background-color: brown;
+    color: white;
+}
+
+p span{
+    background-color: black;
+    color: white;
+}
 
  
