--- a/Trabajo_1/src/main/resources/static/css/estilos.css
+++ b/Trabajo_1/src/main/resources/static/css/estilos.css
@@ -5,28 +5,30 @@ Estilos de formatos
     box-sizing: border-box;
     margin: 0;
 }
+
+
 body{
     font-family: sans-serif;
     padding:80px 20px 0;
-    background-color: bisque;
-     
+    background-color: black;
+
 }
 header{
     position: fixed;
     background-color: blue;
-    
+
     top: 0;
     left: 0;
     height: 80px;
     width: 100%;
-        
+
 }
 
 aside{
     position: fixed;
-    background-color: aquamarine;
-    
-    top: 80px;
+    background-color:#333333;
+
+    top: 85px;
     left: 0;
     bottom: 20px;
     width: 20%;
@@ -34,8 +36,8 @@ aside{
 section{
     overflow-y: scroll;
     position: fixed;
-    background-color: bisque;
-    
+    background-color: black;
+
     top: 80px;
     left: 20%;
     bottom: 20px;
@@ -49,34 +51,33 @@ footer{
     height: 20px;
     width: 100%;
     text-align: center;
-    background-color: yellow;
-    color: red;
+    background-color: #000099;
+    color: white;
 
 }
 a{
     text-decoration: none;
-    background-color: green;
+    background-color: transparent;
     color: white;
 }
 
 a:hover{
-    background-color: black;
-    color: white;
+    background-color: transparent;
+    color: black;
 }
 /*para utilizar un id*/
 #alerta{
-    background-color: yellowgreen;
-    color: red;
+    background-color: blue;
+    color: white;
 }
 /*para esto se utiliza class*/
 .aviso{
-    background-color: brown;
+    margin-left: 10px;
+    margin-right: 10px;
+    text-align: justify;
+    background-color: transparent;
     color: white;
+    margin-top: 10px;
+    margin-bottom: 20px;
 }
 
-p span{
-    background-color: black;
-    color: white;
-}
-
- 
